--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,9 @@ html {
 color: inherit;
 text-decoration:none;
 }
-
 * {
 	-webkit-text-size-adjust: none;
 }
-
-
 body {
 	font: 13px/19px  Arial, Helvetica, sans-serif;
 	color:#ecedef;
@@ -56,7 +53,6 @@ h2 {
 	line-height: 60px;
 	text-align: center;
 }
-
 h3 {
 	font-size: 48px;
 	line-height: 54px;
@@ -560,10 +556,6 @@ address dd span {
 	display: inline-block;
 	text-align: left;
 }
-
-
-
-
 /************Footer***********/
 
 footer {
@@ -605,15 +597,18 @@ footer a:hover {
 #toTop:hover {
 	background-position: right 0;
 }
-
 #streetfood_detailview{
-	float:left;
     height: auto;
     width: auto
 }
-
-#page01 {
-	padding-bottom: 0px;
+#streetfood_detailview img{
+	float:left;
 }
 
+#page01 {
+	top: 0px;
+}
+#page02{
+	top:0px;
+}
 
