--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ border-color: #334960 transparent transparent transparent;
 }
 
 #page4:after {
-	border-color: #334960 transparent transparent transparent;
+	border-color: #f17c72 transparent transparent transparent;
 
 }
 
